--- a/index.html
+++ b/index.html
@@ -3,14 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Trivia Project" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Card Validator App Project" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="preload" href="./style.css" as="style" />
     <link rel="stylesheet" href="./style.css" type="text/css" />
     <title>Card Validator</title>
 </head>
 <body>
+
+    <div class="container">
+        <div class="card">
+            <div class="card_title">
+                <h2>Prueba</h2>
+            </div>
+            <div class="card__form">
+                <form class="form">
+                    <label for="card-num" class="label">
+                        <input type="text" name="card-num" id="card-num" maxlength="16" minlength="16" pattern="[*\d]{16}" placeholder="____ ____ ____ ____" autocomplete="off" required />
+                        <span></span>
+                    </label>
+                    <button type="submit">Validate</button>
+                </form>
+            </div>
+            <div class="card__log">
+                <h3>Resultado:</h3>
+                <p class="res-masking">
+                </p>
+                <p class="res-number">
+                </p>
+                <p class="res-number-masked">
+                </p>
+                <p class="res-valid">
+                </p>
+            </div>
+        </div>
+    </div>
     
-    <script src="./index.js"></script>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
